<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/app_logo_reg_id"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@mipmap/resimson"
        android:contentDescription="@string/todo">

    </ImageView>

    <TextView
        android:id="@+id/reg_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_logo_reg_id"
        android:layout_centerHorizontal="true"
        android:text="@string/app_text_name_id"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold">

    </TextView>

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="250dp"
        android:padding="5dp"
        android:layout_height="40dp"
        android:layout_below="@id/reg_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_backround"
        android:hint="@string/reg_name_hint"
        android:inputType="textPersonName"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:autofillHints="">

    </EditText>

    <EditText
        android:id="@+id/reg_email"
        android:padding="5dp"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@id/reg_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_backround"
        android:hint="@string/reg_email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:autofillHints="">

    </EditText>

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@id/reg_email"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_backround"
        android:hint="@string/reg_pass_hint"
        android:inputType="textPassword"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:autofillHints="">

    </EditText>

    <Button
        android:id="@+id/reg_buton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/buton_backround"
        android:text="@string/reg_buton"
        android:textColor="@color/colorWhite">

    </Button>

    <TextView
        android:id="@+id/reg_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_buton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/reg_have_account"
        android:textColor="@color/colorWhite"
        android:textSize="20sp">

    </TextView>

</RelativeLayout>





